fix: better spacing and scroll behavior

--- a/web/src/global.css
+++ b/web/src/global.css
@@ -11,24 +11,13 @@ html, body {
 
 body {
   margin: 0;
-  padding: 1.5rem;
+  padding: 0;
   font-size: 1rem;
   line-height: 1.5;
 }
 
-.page-header {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
 @media (max-width: 600px) {
   body {
-    padding: 1rem;
     font-size: 1.05rem;
   }
-}
-
-.page-header tbx-theme-toggle {
-  margin-left: auto;
 }
